# main_app

./: CMakeLists.txt  package.xml
docs/: Doxyfile.in
main_node/: CMakeLists.txt
main_node/include/: main_node.hpp  ros_data_provider.hpp
main_node/src/: main_node.cpp  ros_data_provider.cpp
sensor_node/: CMakeLists.txt
sensor_node/include/: sensor_node.hpp
sensor_node/src/: sensor_node.cpp
solver/: CMakeLists.txt
solver/include/: idataprovider.h  idataprovider.hpp  isolver.h  laplacesolver.h  linearsolver.h  solver.h  solver.hpp  thread_safe_queue.hpp
solver/src/: isolver.cpp  laplacesolver.cpp  linearsolver.cpp  solver.cpp
src/: main_swc.cpp  sensor.cpp
